# tree-sitter-strictdoc

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  go.mod  out.txt  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: binding_test.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_strictdoc/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterStrictdocTests/: TreeSitterStrictdocTests.swift
grammar/: grammar.js
grammar/rules/: common.js  document_config.js  document_grammar.js  document_metadata.js  document_view.js  section_or_requirement.js  type_system.js
queries/: highlights.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/plain/: anchor.sdoc  documentGrammar.sdoc  documentSection.sdoc  documentTitle.sdoc  rst.sdoc
